<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BaseBlue"
    android:orientation="vertical" >

    

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_titlecontent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_input_register"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edt_username_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:alpha="0.9"
            android:background="@drawable/bg_edt_regpage"
            android:hint="@string/hint_type_username"
            android:padding="10dp"
            android:textColor="@color/bg_layout_blue" />

        <EditText
            android:id="@+id/edt_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:alpha="0.9"
            android:background="@drawable/bg_edt_regpage"
            android:hint="@string/hint_type_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/bg_layout_blue" />

        <CheckBox
            android:id="@+id/ckb_passRemember_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/label_remember_password"
            android:textColor="@color/normal_White" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:alpha="0.9"
        android:background="@drawable/bg_whitebtn_normal"
        android:text="@string/btn_login"
        android:textColor="@color/bg_layout_blue"
        />

    <RelativeLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
         >
        <TextView
            android:textColor="@color/normal_White"
            android:layout_marginLeft="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/forgetpass"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_forget_password" />

        <TextView
            android:textColor="@color/normal_White"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/newuser"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_new_user" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" 
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" 
            android:layout_marginBottom="20dp"
            >

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/alaph_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workteam_name"
                android:textColor="@color/alaph_white" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@color/alaph_white" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>