<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.teacherassistant.ui.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_blue"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_title"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:src="@drawable/title" />

        <TextView
            android:id="@+id/txt_title_mian"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/call_name"
            android:textColor="@color/alaph_white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_menu_main"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_add" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viwepager_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </android.support.v4.view.ViewPager>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#aaaaaa" />

    <com.teacherassistant.view.ViewPagerIndicator
        android:id="@+id/id_indicator"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/bg_layout_gray"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ll_callname"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img_callname_main"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_callname_blue" />

            <TextView
                android:layout_marginTop="3dp"
                android:id="@+id/txt_callname_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="10sp"
                android:text="@string/call_name"
                android:textColor="@color/icon_blue" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_question"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img_question_main"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:src="@drawable/ic_question_gray" />

            <TextView
                android:layout_marginTop="3dp"
                android:id="@+id/txt_question_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:gravity="center"
                android:text="@string/question"
                android:textColor="@color/icon_gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_job"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >
            <ImageView
                android:id="@+id/img_job_main"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_job_gray" />

            <TextView
                android:layout_marginTop="3dp"
                android:id="@+id/txt_job_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="10sp"
                android:text="@string/job"
                android:textColor="@color/icon_gray" />
        </LinearLayout>
    </com.teacherassistant.view.ViewPagerIndicator>

</LinearLayout>